# receipt-parser

./: .gitignore  README.md  pubspec.yaml
algorithms/: canny-edge.ipynb  opencv-dnn.ipynb  utilities.py
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/damattl/receipt_parser/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: camera_screen.dart  image_tools.dart  main.dart  receipt_analyzer.dart  result_screen.dart
lib/image_tools/: c_structs.dart  camera_image_extensions.dart  image_boundaries_painter.dart  image_data.dart  image_tools.dart  image_worker.dart
lib/image_tools_cpp/: CMakeLists.txt  image_tools.cpp  image_tools.h
native_image_tools/: Android.mk  Application.mk  build-android.sh
native_image_tools/src/: CMakeLists.txt  extraction.cpp  image_tools.cpp  image_tools.h  preprocessing.cpp  transform.cpp  utils.cpp
native_image_tools/test/: CMakeLists.txt  image_tools_tests.cpp
native_image_tools/test/debug/: debug_tools.cpp
test/: image_tools_test.dart  widget_test.dart
